update: add new features and fix: styling

--- a/src/components/NavBar/Navbar.css
+++ b/src/components/NavBar/Navbar.css
@@ -113,8 +113,12 @@ form button {
   }
 
   .brand img {
-    width: 3.5rem;
-    height: 3.5rem;
+    width: 3.8rem;
+    height: 3.8rem;
+  }
+
+  .brand h2 {
+    font-size: 1.8rem;
   }
 
   .brand,
@@ -129,7 +133,8 @@ form button {
   form {
     position: absolute;
     width: 80%;
-    margin-top: 10rem;
+    margin-top: 13rem;
+    margin-left: 1rem;
     padding: 0.6rem 2rem;
   }
 
@@ -139,7 +144,7 @@ form button {
 
   .signIn h2 {
     padding-top: 0.85rem;
-    font-size: 1.2rem;
+    font-size: 1.5rem;
   }
 
   .signIn button {
