--- a/src/pages/Home/Home.css
+++ b/src/pages/Home/Home.css
@@ -41,4 +41,12 @@
     margin: 0 3rem;
     gap: 3rem;
   }
+
+  .header h2 {
+    font-size: 1.3rem;
+  }
+
+  .header a {
+    font-size: 1.2rem;
+  }
 }
