--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -32,3 +32,9 @@ footer {
   padding-top: 30px;
   padding-bottom: 50px;
 }
+
+@media screen and (max-width: 767px) {
+  footer {
+    font-size: 3rem;
+  }
+}
