--- a/src/components/SideNav/SideNav.css
+++ b/src/components/SideNav/SideNav.css
@@ -6,6 +6,7 @@
   left: 0;
   border-radius: 0rem 2.8125rem 2.8235rem 0rem;
   border: 1px solid rgba(0, 0, 0, 0.3);
+  z-index: 1;
 }
 
 .sideNav .logo {
